--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -1,47 +1,52 @@
-name: Pornrips Crawler
+name: Crawl Pornrips Data
 
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
     inputs:
       start_page:
-        description: 'Start page number'
+        description: 'Start page number (e.g., 5946)'
         required: true
         default: '5946'
       end_page:
-        description: 'End page number'
+        description: 'End page number (e.g., 1)'
         required: true
         default: '1'
+
+permissions:
+  contents: write  # 授予写权限以提交文件
 
 jobs:
   crawl:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 tqdm
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4 tqdm
 
-    - name: Run crawler
-      env:
-        START_PAGE: ${{ github.event.inputs.start_page }}
-        END_PAGE: ${{ github.event.inputs.end_page }}
-      run: python crawler.py
+      - name: Configure Git
+        run: |
+          git config --global user.name "hhsw2015"
+          git config --global user.email "hhsw2015@gmail.com"
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.email "hhsw2015@gmail.com"
-        git config --global user.name "hhsw2015"
-        git add pornrips_data.csv
-        git commit -m "Update crawled data" || echo "No changes to commit"
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run crawler
+        env:
+          START_PAGE: ${{ github.event.inputs.start_page }}
+          END_PAGE: ${{ github.event.inputs.end_page }}
+        run: |
+          python crawler.py
+
+      - name: Commit and push changes
+        if: always()  # 无论爬虫成功与否都尝试提交
+        run: |
+          git add pornrips_data.csv
+          git commit -m "Final commit after crawl" || echo "No changes to commit"
+          git push || echo "Push failed, possibly no changes or permission issue"
